// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/azure/azure-got-wrapper gitApi should set bearer token and endpoint 1`] = `
WebApi {
  "authHandler": BearerCredentialHandler {
    "allowCrossOriginAuthentication": true,
    "token": "testtoken",
  },
  "isNoProxyHost": [Function],
  "options": {
    "ignoreSslError": false,
  },
  "rest": RestClient {
    "client": HttpClient {
      "_allowRedirectDowngrade": false,
      "_allowRedirects": true,
      "_allowRetries": false,
      "_certConfig": undefined,
      "_disposed": false,
      "_httpProxy": undefined,
      "_ignoreSslError": false,
      "_keepAlive": false,
      "_maxRedirects": 50,
      "_maxRetries": 1,
      "_socketTimeout": undefined,
      "handlers": [
        BearerCredentialHandler {
          "allowCrossOriginAuthentication": true,
          "token": "testtoken",
        },
      ],
      "requestOptions": {
        "ignoreSslError": false,
      },
    },
  },
  "serverUrl": "https://dev.azure.com/renovate2",
  "vsoClient": VsoClient {
    "_initializationPromise": Promise {},
    "_locationsByAreaPromises": {},
    "basePath": "/renovate2",
    "baseUrl": "https://dev.azure.com/renovate2",
    "restClient": RestClient {
      "client": HttpClient {
        "_allowRedirectDowngrade": false,
        "_allowRedirects": true,
        "_allowRetries": false,
        "_certConfig": undefined,
        "_disposed": false,
        "_httpProxy": undefined,
        "_ignoreSslError": false,
        "_keepAlive": false,
        "_maxRedirects": 50,
        "_maxRetries": 1,
        "_socketTimeout": undefined,
        "handlers": [
          BearerCredentialHandler {
            "allowCrossOriginAuthentication": true,
            "token": "testtoken",
          },
        ],
        "requestOptions": {
          "ignoreSslError": false,
        },
      },
    },
  },
}
`;

exports[`modules/platform/azure/azure-got-wrapper gitApi should set password and endpoint 1`] = `
WebApi {
  "authHandler": BasicCredentialHandler {
    "allowCrossOriginAuthentication": true,
    "password": "pass",
    "username": "user",
  },
  "isNoProxyHost": [Function],
  "options": {
    "ignoreSslError": false,
  },
  "rest": RestClient {
    "client": HttpClient {
      "_allowRedirectDowngrade": false,
      "_allowRedirects": true,
      "_allowRetries": false,
      "_certConfig": undefined,
      "_disposed": false,
      "_httpProxy": undefined,
      "_ignoreSslError": false,
      "_keepAlive": false,
      "_maxRedirects": 50,
      "_maxRetries": 1,
      "_socketTimeout": undefined,
      "handlers": [
        BasicCredentialHandler {
          "allowCrossOriginAuthentication": true,
          "password": "pass",
          "username": "user",
        },
      ],
      "requestOptions": {
        "ignoreSslError": false,
      },
    },
  },
  "serverUrl": "https://dev.azure.com/renovate3",
  "vsoClient": VsoClient {
    "_initializationPromise": Promise {},
    "_locationsByAreaPromises": {},
    "basePath": "/renovate3",
    "baseUrl": "https://dev.azure.com/renovate3",
    "restClient": RestClient {
      "client": HttpClient {
        "_allowRedirectDowngrade": false,
        "_allowRedirects": true,
        "_allowRetries": false,
        "_certConfig": undefined,
        "_disposed": false,
        "_httpProxy": undefined,
        "_ignoreSslError": false,
        "_keepAlive": false,
        "_maxRedirects": 50,
        "_maxRetries": 1,
        "_socketTimeout": undefined,
        "handlers": [
          BasicCredentialHandler {
            "allowCrossOriginAuthentication": true,
            "password": "pass",
            "username": "user",
          },
        ],
        "requestOptions": {
          "ignoreSslError": false,
        },
      },
    },
  },
}
`;

exports[`modules/platform/azure/azure-got-wrapper gitApi should set personal access token and endpoint 1`] = `
WebApi {
  "authHandler": BearerCredentialHandler {
    "allowCrossOriginAuthentication": true,
    "token": "123test",
  },
  "isNoProxyHost": [Function],
  "options": {
    "ignoreSslError": false,
  },
  "rest": RestClient {
    "client": HttpClient {
      "_allowRedirectDowngrade": false,
      "_allowRedirects": true,
      "_allowRetries": false,
      "_certConfig": undefined,
      "_disposed": false,
      "_httpProxy": undefined,
      "_ignoreSslError": false,
      "_keepAlive": false,
      "_maxRedirects": 50,
      "_maxRetries": 1,
      "_socketTimeout": undefined,
      "handlers": [
        BearerCredentialHandler {
          "allowCrossOriginAuthentication": true,
          "token": "123test",
        },
      ],
      "requestOptions": {
        "ignoreSslError": false,
      },
    },
  },
  "serverUrl": "https://dev.azure.com/renovate1",
  "vsoClient": VsoClient {
    "_initializationPromise": Promise {},
    "_locationsByAreaPromises": {},
    "basePath": "/renovate1",
    "baseUrl": "https://dev.azure.com/renovate1",
    "restClient": RestClient {
      "client": HttpClient {
        "_allowRedirectDowngrade": false,
        "_allowRedirects": true,
        "_allowRetries": false,
        "_certConfig": undefined,
        "_disposed": false,
        "_httpProxy": undefined,
        "_ignoreSslError": false,
        "_keepAlive": false,
        "_maxRedirects": 50,
        "_maxRetries": 1,
        "_socketTimeout": undefined,
        "handlers": [
          BearerCredentialHandler {
            "allowCrossOriginAuthentication": true,
            "token": "123test",
          },
        ],
        "requestOptions": {
          "ignoreSslError": false,
        },
      },
    },
  },
}
`;
